--- a/ProductReviewAungAndBryant/Client/ProductReviewAungAndBryant.Client.csproj
+++ b/ProductReviewAungAndBryant/Client/ProductReviewAungAndBryant.Client.csproj
@@ -8,6 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Pages\Reviewer\CreateReviewers.razor" />
+    <Content Remove="Pages\Reviewer\EditReviewers.razor" />
+    <Content Remove="Pages\Reviewer\Reviewers.razor" />
+    <Content Remove="Pages\Reviewer\ViewReviewer.razor" />
+    <Content Remove="Pages\Review\CreateReview.razor" />
+    <Content Remove="Pages\Review\EditReview.razor" />
+    <Content Remove="Pages\Review\Review.razor" />
+    <Content Remove="Pages\Review\ViewReview.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.14" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="7.0.14" />
@@ -20,6 +31,11 @@
 
   <ItemGroup>
     <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Reviewer\" />
+    <Folder Include="Pages\Review\" />
   </ItemGroup>
 
 </Project>
